# simpleRagDemo

./: .env.example  .gitignore  README.md  pyproject.toml  run-backend.sh  run-frontend.sh  verify.sh
.github/workflows/: ci.yml
backend/app/: agent.py  auth.py  case_state.py  chunking.py  config.py  embeddings.py  index_state.py  ingest.py  llm.py  main.py  models.py  observability.py  retrieval.py  support_db.py  support_tools.py  vectorstore.py
backend/evals/: billing_cases.json
backend/fixtures/: action-log.jsonl  billing_data.json  observability-log.jsonl  operators.json  support.sqlite3
backend/fixtures/case-notes/: case_smoke_duplicate_charge.jsonl
backend/scripts/: eval_billing_support.py  ingest_seed_docs.py  regression_billing_support.py  smoke_test_support_tools.py
docs/seed/: api-guidelines.md  billing-handbook.md  payment-failures.md  rag-primer.md  support-escalation.md  tax-and-invoices.md  ui-notes.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
